extra_linkflags 加载pthread动态库
extra_linkflags 加载pthread动态库

--- a/src/dbsvr/BUILD
+++ b/src/dbsvr/BUILD
@@ -38,7 +38,11 @@ cc_binary(
 		'-Wall',
 		#'-Werror',
 		'-std=gnu++11',
-	]
+	],
+	extra_linkflags = [
+        '-lpthread',
+        #'-L/usr/lib64/mysql/',
+    ]
 )
 
 cc_binary(
@@ -63,5 +67,8 @@ cc_binary(
 		'-Wall',
 		#'-Werror',
 		'-std=gnu++11',
+	],
+	extra_linkflags = [
+		'-lpthread',
 	]
 )
