--- a/src/net/BUILD
+++ b/src/net/BUILD
@@ -1,12 +1,13 @@
 cc_library(
     name =  'LightServerNet',
     srcs = [
-    			'Channel.cpp',
-    			'EventLoop.cpp',
-    			'Socket.cpp',
-    			'TcpServer.cpp',
-    			'Buffer.cpp',
-    			'poll/Epoll.cpp',
+				'Channel.cpp',
+				'EventLoop.cpp',
+				'Socket.cpp',
+				'TcpServer.cpp',
+				'Buffer.cpp',
+				'Coder.cpp',
+				'poll/Epoll.cpp',
     		],
     export_incs = ['.',],
     incs = [ '.',],
